Displaying Validation Errors Module

--- a/FriendStorage.UI/App.xaml
+++ b/FriendStorage.UI/App.xaml
@@ -10,6 +10,7 @@
         <converters:ComboBoxOriginalValueConverter x:Key="ComboBoxOriginalValueConverter" />
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Styles/Brushes.xaml"/>
+		  <ResourceDictionary Source="Styles/ValidationErrorTemplates.xaml" />
           <ResourceDictionary Source="Styles/ControlBaseStyle.xaml" />
         <ResourceDictionary Source="Styles/Button.xaml"/>
         <ResourceDictionary Source="Styles/CheckBox.xaml"/>
