--- a/FriendStorage.UI/View/FriendEditView.xaml
+++ b/FriendStorage.UI/View/FriendEditView.xaml
@@ -40,7 +40,8 @@
 
     <Label Content="Is Developer" Grid.Row="4" Margin="5 0"/>
     <CheckBox IsChecked="{Binding Friend.IsDeveloper,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                     Grid.Row="4" VerticalAlignment="Center"  Grid.Column="1"/>
+                     Grid.Row="4" VerticalAlignment="Center"  Grid.Column="1"
+			  HorizontalAlignment="Left"/>
 
     <Label Content="Friendgroup" Grid.Row="5" Margin="5"/>
     <ComboBox ItemsSource="{Binding FriendGroupLookup}"
@@ -72,7 +73,7 @@
       </DataGrid.Columns>
     </DataGrid>
 	  
-	  <controls:ChangeTrackingCollectionInfo DataContext="{Binding Friend.Emails}"
+	  <controls:ChangeTrackingCollectionInfo DataContext="{Binding Friend.Emails, ValidatesOnNotifyDataErrors=False}"
 											 Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" />
 
     <StackPanel Grid.Row="8" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom">
