--- a/FriendStorage.UI/Styles/ControlBaseStyle.xaml
+++ b/FriendStorage.UI/Styles/ControlBaseStyle.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:behaviors="clr-namespace:FriendStorage.UI.Behaviors">
     <Style TargetType="Control" x:Key="ControlBaseStyle">
-        <Setter Property="behaviors:ChangeBehavior.IsActive" Value="True" />
+		<Setter Property="Validation.ErrorTemplate" Value="{StaticResource DefaultErrorTemplate}" />
+		<Setter Property="behaviors:ChangeBehavior.IsActive" Value="True" />
         <Style.Triggers>
             <Trigger Property="behaviors:ChangeBehavior.IsChanged" Value="True">
                 <Setter Property="Background" Value="{StaticResource IsChangedBackgroundBrush}" />
@@ -10,6 +11,9 @@
                         Value="{Binding RelativeSource={RelativeSource Self}, 
                                         Path=(behaviors:ChangeBehavior.OriginalValue)}" />
             </Trigger>
+			<Trigger Property="Validation.HasError" Value="True">
+				<Setter Property="Background" Value="{StaticResource HasErrorBackgroundBrush}" />
+			</Trigger>
         </Style.Triggers>
     </Style>
 
@@ -23,6 +27,9 @@
                         Value="{Binding RelativeSource={RelativeSource Self}, 
                                         Path=(behaviors:ChangeBehavior.OriginalValue)}" />
             </Trigger>
-        </Style.Triggers>
+			<Trigger Property="Validation.HasError" Value="True">
+				<Setter Property="Background" Value="{StaticResource HasErrorBackgroundBrush}" />
+			</Trigger>
+		</Style.Triggers>
     </Style>
 </ResourceDictionary>
